--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,12 @@
         <div>
           <h1><a href="">Devon's Blog</a></h1>
         </div>
-
-        <div>
-          <p>published: 14.06.2014, 12:14</p>
-          <h2><a href="">My first post</a></h2>
-          <p>Test test1
-        </div>
-
-        <div>
-          <p>published: 14.06.2014, 12:15</p>
-          <h2><a href="">My second post</a></h2>
-          <p>Test test2
-        </div>
+          {% for post in posts %}
+            <div>
+              <p>published: {{ post.published_date }}</p>
+              <h1><a href="">{{ post.title }}</a></h1>
+              <p>{{ post.text|linebreaks }}</p>
+            </div>
+          {% endfor %}
     </body>
 </html>
